# space-traders-ui

./: .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json
src/: Root.jsx  Root.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/migrations/2023-06-13-151238_create_systems/: down.sql  up.sql
src-tauri/migrations/2023-06-13-164355_create_system_waypoints/: down.sql
src-tauri/migrations/create_fleet/: down.sql  up.sql
src-tauri/migrations/create_fleet_cargo/: down.sql  up.sql
src-tauri/migrations/create_fleet_modules/: down.sql  up.sql
src-tauri/migrations/create_fleet_mounts/: down.sql  up.sql
src-tauri/migrations/create_jump_gates/: down.sql  up.sql
src-tauri/migrations/create_market_trade_goods/: down.sql  up.sql
src-tauri/migrations/create_market_transactions/: down.sql  up.sql
src-tauri/migrations/create_markets/: down.sql  up.sql
src-tauri/migrations/create_shipyard_ship_modules/: down.sql  up.sql
src-tauri/migrations/create_shipyard_ship_mounts/: down.sql  up.sql
src-tauri/migrations/create_shipyard_ships/: down.sql  up.sql
src-tauri/migrations/create_shipyard_transactions/: up.sql
src-tauri/migrations/create_surveys/: down.sql  up.sql
src-tauri/migrations/create_system_waypoints/: up.sql
src-tauri/migrations/create_systems/: up.sql
src-tauri/migrations/create_waypoint_traits/: down.sql  up.sql
src-tauri/migrations/create_waypoints/: down.sql  up.sql
src-tauri/src/: configuration.rs  main.rs
src-tauri/src/api/: agents.rs  contracts.rs  factions.rs  fleet.rs  mod.rs  requests.rs  systems.rs
src-tauri/src/app/: mod.rs
src-tauri/src/data/: db.rs  fleet.rs  mod.rs  models.rs  schema.rs  system.rs
src-tauri/src/models/: agent.rs  chart.rs  contract.rs  faction.rs  market.rs  mod.rs  shipyard.rs  size.rs  status.rs  survey.rs  system.rs  trait_type.rs  transaction.rs  waypoint.rs
src-tauri/src/models/ship/: cargo.rs  cooldown.rs  crew.rs  engine.rs  frame.rs  fuel.rs  mod.rs  module.rs  mount.rs  navigation.rs  reactor.rs  registration.rs  requirements.rs
src/components/: Canvas.jsx  Footer.jsx  Footer.tsx  Header.jsx  Header.tsx  Login.jsx  Login.tsx  ProgressBar.tsx  Ship.jsx  Ship.tsx  SystemSVG.jsx  Tag.jsx  Tag.tsx  index.jsx  index.tsx
src/js/: index.js  index.ts  interfaces.ts  sessionStorage.js  state.js  state.ts  storage.js  storage.ts  text.ts
src/routes/: contracts.jsx  faction.jsx  (+7 more)
(+22 files in other folders)
